tests/snapshots/lifecycle__preview__changed.snap
---
source: tests/lifecycle.rs
expression: out.diagnostics()
---
▶ previewing acme/widgets
- dry run — nothing on GitHub will be modified
▶ dispatching prepare-release on main
  run: https://github.com/acme/widgets/actions/runs/42
▶ waiting for prepare-release
✔ prepare-release succeeded
▶ downloading ship-release
✔ artifact is valid

  version: 1.4.0
  tag: v1.4.0

── Pull Request ─────────────────────────────────────────────

  title: chore(release): 1.4.0


── end ──────────────────────────────────────────────────────
- run `gh ship prepare` to open the Release PR
