tests/snapshots/lifecycle__preview__unchanged.snap
---
source: tests/lifecycle.rs
expression: out.stderr
---
▶ previewing acme/widgets
- dry run — nothing on GitHub will be modified
▶ dispatching prepare-release on main
  ship id: [nonce]
  run: https://github.com/acme/widgets/actions/runs/42
▶ waiting for prepare-release
✔ prepare-release succeeded
▶ downloading ship-release
✔ artifact is valid

✔ nothing to release — the prepare workflow reported no changes
